--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
     <footer>
         <div>
             <div class="logo">
-                <i class="fa-brands fa-instagram" style="color: #c7cfdb;"></i>
-                <i class="fa-brands fa-twitter" style="color: #c7cfd6;"></i>
-                <i class="fa-brands fa-linkedin" style="color: #c7cfd6;"></i>
-                <i class="fa-brands fa-whatsapp" style="color: #c7cfd6;"></i>
+                <i class="fa-brands fa-instagram fa-xl" ></i>
+                <i class="fa-brands fa-twitter fa-xl" ></i>
+                <i class="fa-brands fa-linkedin fa-xl" ></i>
+                <i class="fa-brands fa-whatsapp fa-xl" ></i>
             </div>
             <div class="copyright">© 2023. All rights reserved.</div>
         </div>
